# stock-universe

./: .gitignore  ARCHITECTURE.md  README.md
.cursor/rules/: backend-python.mdc  frontend-vue.mdc  project-overview.mdc  universe-data.mdc
backend/: .env.example  main.py  pyproject.toml
backend/data/: stocks.json
backend/docs/: sample_chat_responses.json
backend/models/: schemas.py
backend/routers/: alerts.py  chat.py  stocks.py
backend/scripts/: test_parse_filters.py
backend/services/: agent.py
backend/stock_universe_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_agent.py  test_stocks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: AiChat.vue  AlertBell.vue  AlertManagement.vue  FilterBar.vue  ReturnsBarChart.vue  ScatterChart.vue  ShortcutHelpOverlay.vue  SplashScreen.vue  StockDetailPanel.vue  StockTable.vue  TopBar.vue
frontend/src/composables/: shortcuts.ts  useChat.ts  useStocks.ts
frontend/src/constants/: tableColumns.ts
frontend/src/styles/: _ag-grid-theme.scss  _bootstrap-overrides.scss  _utilities.scss  _variables.scss  main.scss
frontend/src/types/: stock.ts
